metadata: disable WHIRLPOOL & SHA256, add BLAKE2B (#885909)

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,7 +1,9 @@
 # This went live Wednesday, July 4, 2012 at 10:00 UTC
 # For more details, please see: http://archives.gentoo.org/gentoo-dev-announce/msg_00000.xml
 # and/or GLEP 59.
-manifest-hashes = SHA256 SHA512 WHIRLPOOL
+
+# disable WHIRLPOOL: https://bugs.gentoo.org/885909
+manifest-hashes = BLAKE2B SHA512
 
 # Bug #470670 - gentoo's council says to deprecate
 # EAPIs 1 and 2.
