dnsdist: add fix for rule removal by name
Also update the sample config to work out of the box.

--- a/net-dns/dnsdist/files/dnsdist.conf.example
+++ b/net-dns/dnsdist/files/dnsdist.conf.example
@@ -4,16 +4,13 @@ Please refer to the dnsdist documentation
 at http://dnsdist.org/README/ for more information.
 ]]--
 
--- Listen on 192.0.2.1 on port 53.
-setLocal("192.0.2.1:53")
+-- Listen on 127.0.0.1 on port 53 (default).
+setLocal("127.0.0.1")
 
--- Add 2001:db8::2:1 to the list of adresses dnsdist should listen on
-addLocal("2001:db8::2:1")
-
--- Add to the ACL set who can use this server
-addACL("192.0.2.0/24")
-addACL("2001:db8::/32")
+-- Add ::1 to the list of adresses dnsdist should listen on
+addLocal("::1")
 
 -- Instantiate two new downstram server with their default settings
-newServer("198.51.100.1")
-newServer("198.51.100.2")
+newServer("1.1.1.1")
+newServer("8.8.8.8")
+
