--- a/dev-util/webhook/files/webhook.json.example
+++ b/dev-util/webhook/files/webhook.json.example
@@ -3,5 +3,11 @@
     "id": "example",
     "execute-command": "/var/lib/webhooks/example.sh",
     "command-working-directory": "/var/lib/webhooks"
+    "pass-arguments-to-command":
+    [
+      {
+        "source": "entire-payload"
+      }
+    ]
   }
 ]
